--- a/.gitignore
+++ b/.gitignore
@@ -145,6 +145,9 @@ gradle-app.setting
 # Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
 !gradle-wrapper.jar
 
+# Avoid ignoring libs jar file
+!/app/libs/*.jar
+
 # Cache of project
 .gradletasknamecache
 
