--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:24.+'
     compile 'com.google.firebase:firebase-core:10.0.1'
     compile 'com.google.firebase:firebase-messaging:10.0.1'
+    compile 'com.android.support:design:24.0.0'
     testCompile 'junit:junit:4.12'
 }
 
