--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:24.2.1'
     compile 'com.squareup:otto:1.3.7'
     compile 'com.squareup.okhttp3:okhttp:3.2.0'
+    compile 'noman.placesapi:placesAPI:1.1.3'
     testCompile 'junit:junit:4.12'
 }
 
