[KIOSK-11] storeAcivity (레이아웃, 기능 구현) - 구글 지도 맵 활용 *아직 dimens.xml 처리x

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,6 +42,12 @@
         </activity>
 
         <activity
+            android:name=".order.OrderActivity"
+            android:label="@string/app_title"
+            android:screenOrientation="portrait">
+        </activity>
+
+        <activity
             android:name=".order_pay.OrderPayActivity"
             android:label="@string/app_title"
             android:screenOrientation="portrait">
