[KIOSK-11] v1을 위한 데모버전 정리 작업(carouselview, google place api, 기타 라이브러리 제거)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,11 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="net.bluehack.kiosk">
 
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application
         android:name=".ApplicationLoader"
@@ -16,17 +13,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
-        <!--google map-->
-        <meta-data
-            android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyA7av6NBZ3U-CwHzYMPex2M96OWP1zQz4Y"/>
-        <meta-data
-            android:name="com.google.android.gms.version"
-            android:value="@integer/google_play_services_version" />
-
         <activity
             android:name=".main.MainActivity"
-            android:label="@string/app_title"
+            android:label="@string/tool_bar_main"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -37,31 +26,31 @@
 
         <activity
             android:name=".store.StoreActivity"
-            android:label="@string/app_title"
+            android:label="@string/tool_bar_store"
             android:screenOrientation="portrait">
         </activity>
 
         <activity
             android:name=".order.OrderActivity"
-            android:label="@string/app_title"
+            android:label="@string/tool_bar_order"
             android:screenOrientation="portrait">
         </activity>
 
         <activity
             android:name=".order_pay.OrderPayActivity"
-            android:label="@string/app_title"
+            android:label="@string/tool_bar_order"
             android:screenOrientation="portrait">
         </activity>
 
         <activity
             android:name=".order_option.OrderOptionActivity"
-            android:label="@string/app_title"
+            android:label="@string/tool_bar_order"
             android:screenOrientation="portrait">
         </activity>
 
         <activity
             android:name=".process.ProcessActivity"
-            android:label="@string/app_title"
+            android:label="@string/tool_bar_main"
             android:screenOrientation="portrait">
         </activity>
 
