--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
 
         <activity
             android:name=".login.LoginActivity"
-            android:label="@string/tool_bar_store"
+            android:label="@string/app_name"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -25,12 +25,18 @@
         </activity>
 
         <activity
+            android:name=".main.MainActivity"
+            android:label="@string/tool_bar_main"
+            android:screenOrientation="portrait">
+        </activity>
+
+        <activity
             android:name=".store.StoreActivity"
             android:label="@string/tool_bar_store"
             android:screenOrientation="portrait">
         </activity>
 
-        <activity
+        <!--<activity
             android:name=".order.OrderActivity"
             android:label="@string/tool_bar_order"
             android:screenOrientation="portrait">
@@ -52,7 +58,7 @@
             android:name=".process.ProcessActivity"
             android:label="@string/tool_bar_main"
             android:screenOrientation="portrait">
-        </activity>
+        </activity>-->
 
     </application>
 
