[KIOSK-11] [KIOSK-73] add menu_option activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -52,6 +52,12 @@
             android:name=".menu.MenuActivity"
             android:screenOrientation="portrait">
         </activity>
+
+        <activity
+            android:name=".menu.option.MenuOptionActivity"
+            android:label="@string/tool_bar_menu_option"
+            android:screenOrientation="portrait">
+        </activity>
         <!--<activity
             android:name=".order.OrderActivity"
             android:label="@string/tool_bar_order"
